wifi_led_project/build/log/idf_py_stdout_output_50582
Command: ninja all
[1/9] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/station_example_main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/station_example_main.cpp.obj 
/home/mikolaj/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/mikolaj/work/ESP32_smart_led/wifi_led_project/build/config -I/home/mikolaj/work/ESP32_smart_led/wifi_led_project/main -I/home/mikolaj/esp/esp-idf/components/newlib/platform_include -I/home/mikolaj/esp/esp-idf/components/freertos/config/include -I/home/mikolaj/esp/esp-idf/components/freertos/config/include/freertos -I/home/mikolaj/esp/esp-idf/components/freertos/config/xtensa/include -I/home/mikolaj/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/mikolaj/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/mikolaj/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/mikolaj/esp/esp-idf/components/freertos/esp_additions/include -I/home/mikolaj/esp/esp-idf/components/esp_hw_support/include -I/home/mikolaj/esp/esp-idf/components/esp_hw_support/include/soc -I/home/mikolaj/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/mikolaj/esp/esp-idf/components/esp_hw_support/dma/include -I/home/mikolaj/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/mikolaj/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/mikolaj/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/mikolaj/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/mikolaj/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/mikolaj/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/mikolaj/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/mikolaj/esp/esp-idf/components/heap/include -I/home/mikolaj/esp/esp-idf/components/heap/tlsf -I/home/mikolaj/esp/esp-idf/components/log/include -I/home/mikolaj/esp/esp-idf/components/soc/include -I/home/mikolaj/esp/esp-idf/components/soc/esp32 -I/home/mikolaj/esp/esp-idf/components/soc/esp32/include -I/home/mikolaj/esp/esp-idf/components/soc/esp32/register -I/home/mikolaj/esp/esp-idf/components/hal/platform_port/include -I/home/mikolaj/esp/esp-idf/components/hal/esp32/include -I/home/mikolaj/esp/esp-idf/components/hal/include -I/home/mikolaj/esp/esp-idf/components/esp_rom/include -I/home/mikolaj/esp/esp-idf/components/esp_rom/esp32/include -I/home/mikolaj/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/mikolaj/esp/esp-idf/components/esp_rom/esp32 -I/home/mikolaj/esp/esp-idf/components/esp_common/include -I/home/mikolaj/esp/esp-idf/components/esp_system/include -I/home/mikolaj/esp/esp-idf/components/esp_system/port/soc -I/home/mikolaj/esp/esp-idf/components/esp_system/port/include/private -I/home/mikolaj/esp/esp-idf/components/xtensa/esp32/include -I/home/mikolaj/esp/esp-idf/components/xtensa/include -I/home/mikolaj/esp/esp-idf/components/xtensa/deprecated_include -I/home/mikolaj/esp/esp-idf/components/lwip/include -I/home/mikolaj/esp/esp-idf/components/lwip/include/apps -I/home/mikolaj/esp/esp-idf/components/lwip/include/apps/sntp -I/home/mikolaj/esp/esp-idf/components/lwip/lwip/src/include -I/home/mikolaj/esp/esp-idf/components/lwip/port/include -I/home/mikolaj/esp/esp-idf/components/lwip/port/freertos/include -I/home/mikolaj/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/mikolaj/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/mikolaj/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/mikolaj/esp/esp-idf/components/esp_wifi/include -I/home/mikolaj/esp/esp-idf/components/esp_wifi/include/local -I/home/mikolaj/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/mikolaj/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/mikolaj/esp/esp-idf/components/esp_event/include -I/home/mikolaj/esp/esp-idf/components/esp_phy/include -I/home/mikolaj/esp/esp-idf/components/esp_phy/esp32/include -I/home/mikolaj/esp/esp-idf/components/esp_netif/include -I/home/mikolaj/esp/esp-idf/components/nvs_flash/include -I/home/mikolaj/esp/esp-idf/components/esp_partition/include -I/home/mikolaj/esp/esp-idf/components/esp_driver_gpio/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/mikolaj/work/ESP32_smart_led/wifi_led_project=. -fmacro-prefix-map=/home/mikolaj/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/station_example_main.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/station_example_main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/station_example_main.cpp.obj -c /home/mikolaj/work/ESP32_smart_led/wifi_led_project/main/station_example_main.cpp
/home/mikolaj/work/ESP32_smart_led/wifi_led_project/main/station_example_main.cpp: In member function 'bool WiFiStation::init(bool)':
/home/mikolaj/work/ESP32_smart_led/wifi_led_project/main/station_example_main.cpp:672:47: error: 'ESP_NETIF_DEFAULT_WIFI_AP' was not declared in this scope; did you mean 'ESP_NETIF_DEFAULT_WIFI_STA'?
  672 |             esp_netif_create_wifi(WIFI_IF_AP, ESP_NETIF_DEFAULT_WIFI_AP());
      |                                               ^~~~~~~~~~~~~~~~~~~~~~~~~
      |                                               ESP_NETIF_DEFAULT_WIFI_STA
[2/9] Performing build step for 'bootloader'
[0/1] Re-running CMake...
-- Minimal build - OFF
-- Building ESP-IDF components for target esp32
-- Project sdkconfig file /home/mikolaj/work/ESP32_smart_led/wifi_led_project/sdkconfig
-- Compiler supported targets: xtensa-esp-elf
-- Adding linker script /home/mikolaj/esp/esp-idf/components/soc/esp32/ld/esp32.peripherals.ld
-- Bootloader project name: "bootloader" version: 1
-- Adding linker script /home/mikolaj/esp/esp-idf/components/esp_rom/esp32/ld/esp32.rom.ld
-- Adding linker script /home/mikolaj/esp/esp-idf/components/esp_rom/esp32/ld/esp32.rom.api.ld
-- Adding linker script /home/mikolaj/esp/esp-idf/components/esp_rom/esp32/ld/esp32.rom.libgcc.ld
-- Adding linker script /home/mikolaj/esp/esp-idf/components/esp_rom/esp32/ld/esp32.rom.libc-funcs.ld
-- Adding linker script /home/mikolaj/esp/esp-idf/components/bootloader/subproject/main/ld/esp32/bootloader.ld
-- Adding linker script /home/mikolaj/esp/esp-idf/components/bootloader/subproject/main/ld/esp32/bootloader.rom.ld
-- Components: bootloader bootloader_support efuse esp_app_format esp_bootloader_format esp_common esp_hw_support esp_rom esp_security esp_system esptool_py freertos hal log main micro-ecc newlib partition_table soc spi_flash xtensa
-- Component paths: /home/mikolaj/esp/esp-idf/components/bootloader /home/mikolaj/esp/esp-idf/components/bootloader_support /home/mikolaj/esp/esp-idf/components/efuse /home/mikolaj/esp/esp-idf/components/esp_app_format /home/mikolaj/esp/esp-idf/components/esp_bootloader_format /home/mikolaj/esp/esp-idf/components/esp_common /home/mikolaj/esp/esp-idf/components/esp_hw_support /home/mikolaj/esp/esp-idf/components/esp_rom /home/mikolaj/esp/esp-idf/components/esp_security /home/mikolaj/esp/esp-idf/components/esp_system /home/mikolaj/esp/esp-idf/components/esptool_py /home/mikolaj/esp/esp-idf/components/freertos /home/mikolaj/esp/esp-idf/components/hal /home/mikolaj/esp/esp-idf/components/log /home/mikolaj/esp/esp-idf/components/bootloader/subproject/main /home/mikolaj/esp/esp-idf/components/bootloader/subproject/components/micro-ecc /home/mikolaj/esp/esp-idf/components/newlib /home/mikolaj/esp/esp-idf/components/partition_table /home/mikolaj/esp/esp-idf/components/soc /home/mikolaj/esp/esp-idf/components/spi_flash /home/mikolaj/esp/esp-idf/components/xtensa
-- Configuring done (4.7s)
-- Generating done (0.1s)
-- Build files have been written to: /home/mikolaj/work/ESP32_smart_led/wifi_led_project/build/bootloader
[1/1] cd /home/mikolaj/work/ESP32_smart_led/wifi_led_project/build/bootloader/esp-idf/esptool_py && /home/mikolaj/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/mikolaj/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/mikolaj/work/ESP32_smart_led/wifi_led_project/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
ninja: build stopped: subcommand failed.
